@@ -1,6 +1,7 @@
 UNRELEASED
 
   - http: Cache-Control directives are case-normalised and grouped into pairs
+  - http: Strict_Transport_Security now returns a table and doesn't match on duplicates
 
 0.4 - 2016-11-23
 
